--- a/views/room.html
+++ b/views/room.html
@@ -1,1 +1,12 @@
 <h1>{{roomId}}</h1>
+
+<div>
+	<div ng-repeat="message in messages">
+		<h3 ng-bind="message.user"></h3>
+		<p ng-bind="message.text"></p>
+	</div>
+</div>
+<input type="text" name="user" ng-model="user" placeholder="Name">
+<form ng-submit="addMessage()">
+	<input type="text" name="text" ng-model="message" placeholder="Message">
+</form>
