--- a/views/home.html
+++ b/views/home.html
@@ -23,8 +23,7 @@
                   <div class="row">
                     <div class="col-xs-4">
                       <div class="">
-                        <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="glyphicon glyphicon-log-in"></i></button>
-
+                        <a ng-href="#/rooms/{{room.id}}"><button type="button" class="btn btn-danger btn-circle btn-xl"><i class="glyphicon glyphicon-log-in"></i></button></a>
                       </div>
                     </div>
                     <div class="col-xs-4">
