--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,8 @@
     <button class="btn btn-primary" data-toggle="modal" id="makeRoom" data-target="#newRoom">start a room</button>
   </p>
 
-  <section id="rooms", class="panel panel-default" class="carousel slide">
+  <section id="rooms", class="panel panel-default">
+
     <div class="panel-heading">Active Rooms</div>
     <div class="panel-body">
       <div class="container">
@@ -36,7 +37,6 @@
                     <div class="col-xs-4">
                       <div class="">
                         <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="glyphicon glyphicon-fire"></i></button>
-
                       </div>
                     </div>
                   </div>
@@ -73,8 +73,6 @@
         </form>
       </div>
     </div>
-
   </div>
 </div>
-
 </div>
