add Room variable to room page

--- a/views/room.html
+++ b/views/room.html
@@ -1,5 +1,5 @@
-<h1>{{roomId}}</h1>
-
+<h1>{{room.roomTitle}}</h1>
+<p>{{room.roomDesc}}</p>
 <div>
 	<div ng-repeat="message in messages">
 		<h3 ng-bind="message.user"></h3>
