--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
     <div class="panel-body">
       <div class="container">
         <div class="row">
-             <div ng-repeat="room in rooms"class="col-sm-6 col-md-3">
+             <div ng-repeat="room in rooms"class="col-sm-6 col-md-3" style="margin: 3%;">
               <div class="panel panel-default panel-card">
                 <div class="panel-heading">
                   <img src="img/YouTube_icon.png" />
