added thumbnail for youtube

--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
              <div ng-repeat="room in rooms"class="col-sm-6 col-md-3">
               <div class="panel panel-default panel-card">
                 <div class="panel-heading">
-                  <img src="img/YouTube_icon.png" />
+                  <img ng-src="http://img.youtube.com/vi/{{getId(room.youtubeUrl)}}/hqdefault.jpg" />
                 </div>
 
                 <div class="panel-body text-center">
