--- a/views/room.html
+++ b/views/room.html
@@ -1,5 +1,8 @@
 <h1>{{room.roomTitle}}</h1>
 <p>{{room.roomDesc}}</p>
+<p>{{room}}</p>
+<iframe width="420" height="315" ng-src='{{getUrl(room.youtubeUrl)}}' frameborder="0" allowfullscreen></iframe>
+
 <div>
 	<div ng-repeat="message in messages">
 		<h3 ng-bind="message.user"></h3>
