--- a/views/room.html
+++ b/views/room.html
@@ -1,7 +1,12 @@
+<!-- <script src="https://www.youtube.com/iframe_api"></script> -->
 <h1>{{room.roomTitle}}</h1>
 <p>{{room.roomDesc}}</p>
 
-<iframe width="420" height="315" ng-src='{{getUrl(room.youtubeUrl)}}' frameborder="0" allowfullscreen></iframe>
+<!-- <iframe width="420" height="315" ng-src='{{getUrl(room.youtubeUrl)}}' frameborder="0" allowfullscreen></iframe> -->
+
+<!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div id="player"></div>
+
 
 <div>
 	<div ng-repeat="message in messages">
