--- a/views/room.html
+++ b/views/room.html
@@ -5,24 +5,53 @@
 <!-- <iframe width="420" height="315" ng-src='{{getUrl(room.youtubeUrl)}}' frameborder="0" allowfullscreen></iframe> -->
 
 <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player"></div>
+   <div id="player"></div>
 
 
-<div>
-	<div ng-repeat="message in messages">
-		<h3 ng-bind="message.user"></h3>
-		<p ng-bind="message.text"></p>
-	</div>
-</div>
+<!--<div>-->
+    <!--<div ng-repeat="message in messages">-->
+        <!--<h3 ng-bind="message.user"></h3>-->
+        <!--<p ng-bind="message.text"></p>-->
+    <!--</div>-->
+<!--</div>-->
 <!-- <input type="text" name="user" ng-model="user" placeholder="Name"> -->
 
-<div ng-show="$parent.isLoggedIn()">
-	<form ng-submit="addMessage()">
-		<label ng-bind="getUsername()"></label>
-		<input type="text" name="text" ng-model="message" placeholder="Message">
-	</form>
-</div>
-<div ng-hide="$parent.isLoggedIn()">
-	<p>Please login to leave messages</p>
-</div>
+<!--<div ng-show="$parent.isLoggedIn()">-->
+    <!--<form ng-submit="addMessage()">-->
+        <!--<label ng-bind="getUsername()"></label>-->
+        <!--<input type="text" name="text" ng-model="message" placeholder="Message">-->
+    <!--</form>-->
+<!--</div>-->
 
+
+
+
+<div class="panel-body">
+   <div ng-repeat="message in messages" class="chat">
+       <div class="left clearfix"><span class="chat-img pull-left">
+                           <img src="http://placehold.it/50/55C1E7/fff&text={{message.user}}" alt="User Avatar" class="img-circle" />
+                       </span>
+           <div class="chat-body clearfix">
+               <div class="header">
+                   <strong class="primary-font">{{message.user}}</strong>
+               </div>
+               <p>
+                   {{message.text}}
+               </p>
+           </div>
+       </div>
+       </div>
+
+   <div ng-show="$parent.isLoggedIn()" class="panel-footer">
+       <form ng-submit="addMessage()" class="input-group">
+           <label ng-bind="getUsername()"></label>
+           <input ng-model="message" id="btn-input" name="text" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                       <span class="input-group-btn">
+                           <button type="submit" class="btn btn-warning btn-sm" id="btn-chat">Send</button>
+                       </span>
+       </form>
+   </div>
+   <div ng-hide="$parent.isLoggedIn()">
+       <p>Please login to leave messages</p>
+   </div>
+   </div>
