--- a/views/room.html
+++ b/views/room.html
@@ -5,7 +5,9 @@
 <!-- <iframe width="420" height="315" ng-src='{{getUrl(room.youtubeUrl)}}' frameborder="0" allowfullscreen></iframe> -->
 
 <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+<div class="col-md-6">
    <div id="player"></div>
+  </div>
 
 
 <!--<div>-->
@@ -25,7 +27,7 @@
 
 
 
-
+<div class="col-md-6">
 <div class="panel-body">
    <div ng-repeat="message in messages" class="chat">
        <div class="left clearfix"><span class="chat-img pull-left">
@@ -55,3 +57,4 @@
        <p>Please login to leave messages</p>
    </div>
    </div>
+ </div>
